--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,10 +8,11 @@ set(CMAKE_CUDA_STANDARD 17)
 # CUDA and C++ compiler flags
 set(CXX_FLAGS -Wall -m64 -O3)
 
-set(CMAKE_CXX_FLAGS "-O3 -Wall -m64 -fPIC")
+set(CMAKE_CXX_FLAGS "-O3 -Wall -m64")
 
-set(CMAKE_CUDA_FLAGS "-arch=sm_80 -O3 -rdc=true -lcudadevrt -lcuda")
+set(CMAKE_CUDA_FLAGS "-arch=sm_70 -O3 -rdc=true -lcudadevrt")
 
 add_executable(dev_cudaMalloc_test main.cu)
+target_link_libraries(dev_cudaMalloc_test cuda)
 set_property(TARGET dev_cudaMalloc_test PROPERTY CUDA_SEPARABLE_COMPILATION ON)
 
